--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
         "regenerator-runtime": "^0.13.9",
         "sass": "^1.57.1",
         "sass-loader": "^13.2.0",
+        "ts-loader": "^9.4.2",
+        "typescript": "^4.9.4",
         "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0",
         "webpack-notifier": "^1.15.0"
