--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -5,3 +5,7 @@ controllers:
 kernel:
     resource: ../src/Kernel.php
     type: annotation
+
+dashboard:
+    path: /delivery/admin
+    controller: App\Controller\Admin\DashboardController::index
