--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "symfony/flex": "^2",
         "symfony/form": "6.0.*",
         "symfony/framework-bundle": "6.0.*",
+        "symfony/google-mailer": "6.0.*",
         "symfony/http-client": "6.0.*",
         "symfony/intl": "6.0.*",
         "symfony/mailer": "6.0.*",
@@ -34,6 +35,7 @@
         "symfony/property-info": "6.0.*",
         "symfony/runtime": "6.0.*",
         "symfony/security-bundle": "6.0.*",
+        "symfony/sendgrid-mailer": "6.0.*",
         "symfony/serializer": "6.0.*",
         "symfony/string": "6.0.*",
         "symfony/translation": "6.0.*",
@@ -42,6 +44,7 @@
         "symfony/web-link": "6.0.*",
         "symfony/webpack-encore-bundle": "^1.16",
         "symfony/yaml": "6.0.*",
+        "symfonycasts/reset-password-bundle": "^1.16",
         "tattali/calendar-bundle": "^1.2",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
