--- a/config/services.yaml
+++ b/config/services.yaml
@@ -23,4 +23,8 @@ services:
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
     
-   
+    App\EventListener\SendEmailOnDepartureListener:
+        arguments:
+            - '@mailer'
+        tags:
+            - { name: kernel.event_listener, event: getSubscribedEvents }
